manifests/run/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ns-suspender-deployment
  labels:
    app: kube-ns-suspender
  namespace: kube-ns-suspender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-ns-suspender
  template:
    metadata:
      labels:
        app: kube-ns-suspender
    spec:
      serviceAccountName: kube-ns-suspender
      containers:
      - name: kube-ns-suspender
        image: ghcr.io/govirtuo/kube-ns-suspender:v0.7.1
        ports:
        - name: metrics
          containerPort: 2112
