manifests/run/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-ns-suspender-webui
spec:
  selector:
    app: kube-ns-suspender
  ports:
    - protocol: TCP
      port: 8080
      targetPort: webui
